# Survivant

./: .gitignore  CMakeLists.txt
Dependencies/: CMakeLists.txt
Dependencies/Assimp/: CMakeLists.txt
Dependencies/IMGUIZMO/: CMakeLists.txt
Dependencies/LibMath/LibMath/: CMakeLists.txt
Dependencies/LibMath/LibMath/Header/: Quaternion.inl  Transform.h  Transform.inl  TransformNotifier.h
Dependencies/LibMath/LibMath/Header/Angle/: Degree.inl  Radian.inl
Dependencies/LibMath/LibMath/Header/Geometry/: BoundingBox.h  BoundingSphere.h  Frustum.h  Frustum.inl
Dependencies/LibMath/LibMath/Header/Matrix/: Matrix2.h  Matrix2.inl  Matrix3.h  Matrix3.inl  TMatrix.h  TMatrix.inl
Dependencies/LibMath/LibMath/Header/Vector/: Vector4.inl
Dependencies/LibMath/LibMath_UnitTest/Source/: Matrix_UnitTest.cpp  Quaternion_UnitTest.cpp  Trigonometry_UnitTest.cpp
Dependencies/Lua/: CMakeLists.txt
Dependencies/PhysX/: CMakeLists.txt
Dependencies/RapidJSON/: CMakeLists.txt
Dependencies/Sol/: CMakeLists.txt
LuaAPI/: CMakeLists.txt
LuaAPI/ECS/: component.lua  entity.lua  scene.lua  script.lua  tag.lua
LuaAPI/Input/: input.lua  keys.lua
LuaAPI/Math/: angle.lua
LuaAPI/Physics/: colliders.lua  collision.lua  enums.lua  material.lua  physics.lua  rigidbody.lua  trigger.lua
LuaAPI/Rendering/: camera.lua  clear_mask.lua  color.lua  layers.lua  model.lua  projection_types.lua
LuaAPI/Resources/: resource.lua  resource_manager.lua
LuaAPI/Utility/: application.lua  debug.lua  enum_flags.lua  time.lua
Source/: CMakeLists.txt
Source/Editor/: CMakeLists.txt
Source/Editor/include/SurvivantEditor/App/: EditorEngine.h  EngineApp.cpp  EngineApp.h  GameInstance.h  IEngine.h  TempDefaultScene.h  WorldContext.h
Source/Editor/include/SurvivantEditor/Core/: EditorEngine.h  EditorUI.h  EditorWindow.h  EngineApp.h  IUI.h  InspectorComponentManager.h  InspectorItemManager.h  LuaEditorBinder.h
Source/Editor/include/SurvivantEditor/Gizmo/: ColliderGizmo.h  GridGizmo.h  LightGizmo.h  OrientationGizmo.h  SceneGizmos.h  TransformGizmo.h
Source/Editor/include/SurvivantEditor/Interfaces/: IInspectorable.h  IMenuable.h  IPanelable.h  ISelectable.h  ITextable.h
Source/Editor/include/SurvivantEditor/MenuItems/: Menu.h  MenuBar.h  MenuButton.h  MenuCheckBox.h  PopupMenu.h  SubWindow.h
Source/Editor/include/SurvivantEditor/PanelItems/: PanelButton.h  PanelButtonList.h  PanelCheckbox.h  PanelColorInput.h  PanelComponent.h  PanelConditionalDisplay.h  PanelDisabledTextInput.h  PanelDoubleInput.h  PanelEntity.h  PanelEntitySelector.h  PanelFloatInput.h  PanelGenericResourceSelector.h  PanelGroup.h  PanelImage.h  PanelInputBase.h  PanelIntInput.h  PanelMultipleSelection.h  PanelPopupMenuButton.h  PanelResourceDisplay.h  PanelResourceSelector.h  PanelResourceSelector.inl  PanelScript.h  PanelScriptList.h  PanelSelectionBox.h  PanelSelectionDisplay.h  PanelSeparator.h  PanelTextBox.h  PanelTextInput.h  PanelTransformInput.h  PanelTreeBranch.h  PanelTreeBranch.inl  PanelUInt32Input.h  PanelUniqueSelection.h  PanelVec2Input.h  PanelVec3Input.h  SubWindow.h
Source/Editor/include/SurvivantEditor/Panels/: BuildPanel.h  ConsolePanel.h  ContentDrawerPanel.h  ExamplGameObj.h  GamePanel.h  HierarchyPanel.h  ImagePanel.h  InspectorPanel.h  LogoPanel.h  (+6 more)
Source/Editor/src/: main.cpp
Source/Editor/src/App/: EditorEngine.cpp  EngineApp.cpp  GameInstance.cpp  IEngine.cpp  WorldContext.cpp
Source/Editor/src/Core/: EditorEngine.cpp  EditorWindow.cpp  EngineApp.cpp  InspectorComponentManager.cpp  InspectorItemManager(1).cpp  InspectorItemManager(2).cpp  InspectorItemManager.cpp  LuaEditorBinder.cpp  UIManager.cpp
Source/Editor/src/Gizmo/: ColliderGizmo.cpp  GridGizmo.cpp  LightGizmo.cpp  OrientationGizmo.cpp  SceneGizmos.cpp  TransformGizmo.cpp
Source/Editor/src/MenuItems/: Menu.cpp  MenuBar.cpp  MenuButton.cpp  MenuCheckBox.cpp  PopupMenu.cpp  SubWindow.cpp
Source/Editor/src/PanelItems/: PanelButton.cpp  PanelButtonList.cpp  PanelCheckbox.cpp  PanelColorInput.cpp  PanelComponent.cpp  PanelConditionalDisplay.cpp  PanelDisabledTextInput.cpp  PanelDoubleInput.cpp  PanelEntity.cpp  PanelEntitySelector.cpp  PanelFloatInput.cpp  PanelGenericResourceSelector.cpp  PanelGroup.cpp  PanelImage.cpp  PanelInputBase.cpp  PanelIntInput.cpp  PanelMultipleSelection.cpp  PanelPopupMenuButton.cpp  PanelResourceDisplay.cpp  PanelScript.cpp  PanelScriptList.cpp  PanelSelectionBox.cpp  PanelSelectionDisplay.cpp  PanelSeparator.cpp  PanelTextBox.cpp  PanelTextInput.cpp  PanelTransformInput.cpp  PanelTreeBranch.cpp  PanelUInt32Input.cpp  PanelUniqueSelection.cpp  PanelVec2Input.cpp  PanelVec3Input.cpp
Source/Editor/src/Panels/: BuildPanel.cpp  ConsolePanel.cpp  ContentDrawerPanel.cpp  EditorUI.cpp  ExamplGameObj.cpp  GamePanel.cpp  HierarchyPanel.cpp  ImagePanel.cpp  InspectorPanel.cpp  LoadingPanel.cpp  LogoPanel.h.cpp  MainPanel.cpp  Panel.cpp  SavePanel.cpp  ScenePanel.cpp  TestPanel.cpp
Source/Editor/src/RuntimeBuild/: BuildConfig.cpp  BuildManager.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/App/: CMakeLists.txt
Source/Engine/Audio/: CMakeLists.txt
Source/Engine/Audio/src/: AudioClip.cpp  AudioContext.cpp  AudioHandle.cpp
Source/Engine/Core/: CMakeLists.txt
Source/Engine/Physics/: CMakeLists.txt
Source/Engine/Physics/src/: Material.cpp  PhysicsContext.cpp  RigidBody.cpp
Source/Engine/Scripting/: CMakeLists.txt
Source/Engine/Scripting/src/: LuaComponentHandle.cpp  LuaContext.cpp  LuaScript.cpp  LuaScriptComponent.cpp  LuaScriptHandle.cpp  LuaScriptList.cpp
Source/Engine/UI/src/: Panel.cpp  SubWindow.cpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/include/SurvivantRuntime/: ComponentRegistrations.h  ResourceRegistrations.h  RuntimeApp.h  RuntimeEngine.h  RuntimeWindow.h
Source/Runtime/src/: RuntimeApp.cpp  RuntimeEngine.cpp  RuntimeWindow.cpp  main.cpp
Source/Test/: CMakeLists.txt
Source/Test/include/SurvivantTest/: ComponentRegistrations.h  RotatorComponent.h  SceneTest.h  TemporaryComponent.h  TestApp.h  UserInputComponent.h
Source/Test/src/: SceneTest.cpp  TestApp.cpp  main.cpp
(+440 files in other folders)
