# set target
get_filename_component(CURRENT_FOLDER_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)
set(TARGET_NAME ${PROJECT_NAME}${CURRENT_FOLDER_NAME})

file(GLOB_RECURSE API_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.lua)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${API_FILES})

add_library(${TARGET_NAME} INTERFACE ${API_FILES})

message(STATUS "Added ${TARGET_NAME} target")