# Download RapidJSON
FetchContent_Declare(
	RapidJSON
	GIT_REPOSITORY https://github.com/mondus/rapidjson
	GIT_TAG e0444f56ea7b9e897ddb1b95e1c2af6cf3357699
	GIT_SHALLOW ON
)

set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)

set(BUILD_SHARED_LIBS OFF)
set(RAPIDJSON_BUILD_DOC OFF)
set(RAPIDJSON_BUILD_TESTS OFF)
set(RAPIDJSON_BUILD_EXAMPLES OFF)
set(RAPIDJSON_BUILD_THIRDPARTY_GTEST OFF)

set(CMAKE_FOLDER ${CMAKE_FOLDER}/RapidJSON)

FetchContent_MakeAvailable(RapidJSON)

set(RAPIDJSON_INCLUDE_DIR ${RapidJSON_SOURCE_DIR}/include PARENT_SCOPE)